@@ -12,136 +12,7 @@
 #ifndef DEFTYPE_
 #define DEFTYPE_
 
-#ifdef ENABLE_VTUNE
-#	include <profiler_vtune.h>
-#else
-#	define ProfileScopeEvent(x)
-#	define THREAD_NAME(n,i)
-#	define PROFILE_INIT()
-#	define PROFILE_PAUSE()
-#	define PROFILE_RESUME()
-#endif
-
-#ifndef MSVC
-#	include <SHARE/win_processor_detection.h>
-#endif
-
-/**\brief define standard headers
- *\{
- */
-#include <set>
-#include <map>
-#include <string>
-#include <vector>
-#include <list>
-#include <queue>
-#include <deque>
-#include <stdint.h>
-#include <cassert>
-#include <exception>
-#include <iterator>
-#include <iostream>
-#include <stdio.h>
-#include <math.h>
-#include <string.h>
-#include <stdlib.h>
-#include <errno.h>
-#include <stdexcept>
-#include <sstream>
-//#include <limits.h>
-#include <limits>
-#include <functional>
-#include <ctype.h> //isdigit ...
-#include <algorithm>
-//\}
-
-#if (__cplusplus>= 201103L) || (_MSC_VER >= 1800) //fucking msvc
-#	include <unordered_set>
-#	include <unordered_map>
-#	define HASH_SET std::unordered_set
-#	define HASH_MAP std::unordered_map
-#	define HASH_MULTISET std::unordered_multiset
-#	define HASH_MULTIMAP std::unordered_multimap
-#	define HASH std::hash
-#else
-#	include<boost/unordered_set.hpp>
-#	include<boost/unordered_map.hpp>
-#	define HASH_SET boost::unordered_set
-#	define HASH_MAP boost::unordered_map
-#	define HASH_MULTISET boost::unordered_multiset
-#	define HASH_MULTIMAP boost::unordered_multimap
-#endif
-
-/**\brief define shared ptr
- *\{
- */
-#if defined (__QNX__)
-#	include <boost/shared_ptr.hpp>
-#	define SHARED_PTR boost::shared_ptr 
-#elif defined(unix) || defined(__MINGW32__)//#if defined (__QNX__)
-
-#	if (__cplusplus>= 201103L)
-#		ifdef __MINGW32__//version of gcc
-#			include <tr1/memory>
-#			include<tr1/shared_ptr.h>
-#			define SHARED_PTR std::tr1::shared_ptr
-#		else
-//#			include<SHAREd_ptr.h>
-#			include<memory>
-#			define SHARED_PTR std::shared_ptr
-#		endif
-#	else //#if (__cplusplus>= 201103L)
-# 		include <tr1/memory>
-#		define SHARED_PTR std::tr1::shared_ptr
-#	endif//#if (__cplusplus>= 201103L)
-#elif defined(_WIN32)
-#	define SHARED_PTR std::shared_ptr 
-#endif //#elif defined(_WIN32)
-//\}
-
-/**\brief define system headers
- *\{
- */
-#ifdef _WIN32
-#	ifdef _MSC_VER
-#		ifndef NOMINMAX
-#			define NOMINMAX
-#		endif
-#		include <SHARE/win_unistd.h>
-#		pragma warning(disable : 4290)
-#		pragma warning(disable : 4996)
-#		pragma warning(disable : 4355)
-#		pragma warning(disable : 4251)
-#	else
-#		include <unistd.h> //mingw,cygwin
-#	endif
-
-#	include <winsock2.h>
-#	include <windows.h>
-
-#	ifdef _MSC_VER
-#		include <memory>
-#		undef uuid_t
-#	endif
-#else
-#	include <unistd.h>
-#	ifdef  __QNX__
-#		include <sys/neutrino.h>
-#	endif
-#endif
-//\}
-
-#if   defined(__QNX__)||defined(unix) ||  defined(__MINGW32__)
-#	include <pthread.h>                        // POSIX threads support
-#endif
-
-
-#ifdef  __QNX__
-#	include <sys/time.h>
-#else
-#	include <ctime>
-#endif
-
+#include <SHARE/config/arch_specific_conf.h>
 #include <SHARE/macro_attributes.h>
 #include <SHARE/endian_type.h>
 #include <SHARE/UType/little_big_endian_t.h>
