@@ -27,6 +27,7 @@ file (GLOB LOGGING_HEADER_FILES ../include/${_TARGET_NAME}/logging/*.h ../includ
 file (GLOB SOCKET_HEADER_FILES ../include/${_TARGET_NAME}/Socket/*.h ../include/${_TARGET_NAME}/Socket/*.hpp)
 file (GLOB UTYPE_HEADER_FILES ../include/${_TARGET_NAME}/UType/*.h ../include/${_TARGET_NAME}/UType/*.hpp)
 file (GLOB UTYPE_HEADER_FILES_IMPL ../include/${_TARGET_NAME}/UType/impl/*.h ../include/${_TARGET_NAME}/UType/impl/*.hpp)
+file (GLOB UTYPE_HEADER_CONFIG ../include/${_TARGET_NAME}/config/*.h ../include/${_TARGET_NAME}/config/*.hpp)
 
 set (SHARE_HEADERS
 	 				${DEFTYPE_HEADER_FILES}
@@ -35,7 +36,9 @@ set (SHARE_HEADERS
 					${UTYPE_HEADER_FILES}
 					${UTYPE_EXT_HEADER_FILES}
 					${UTYPE_HEADER_FILES_IMPL}
-					${LOGGING_HEADER_FILES})
+					${LOGGING_HEADER_FILES}
+	 				${UTYPE_HEADER_CONFIG}
+	 )
 
 set (SHARE_PUBLIC_DIR
 					${CMAKE_CURRENT_SOURCE_DIR}/../include
@@ -163,6 +166,7 @@ install(FILES ${CORE_HEADER_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_I
 install(FILES ${LOGGING_HEADER_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/${_TARGET_NAME}/logging)
 install(FILES ${SOCKET_HEADER_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/${_TARGET_NAME}/Socket)
 install(FILES ${UTYPE_HEADER_FILES} DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/${_TARGET_NAME}/UType)
+install(FILES ${UTYPE_HEADER_CONFIG} DESTINATION ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR}/${_TARGET_NAME}/config)
 
 helper_export_library(${_TARGET_NAME})
 
